index test paragraph

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
          <div id="footersection">4</div>
          <iframe src="demo_iframe.htm" height="200" width="100%" title="Iframe Example"></iframe>
 
+         <p>test paragraph</p>
         <!--Colormapping-->
         </div>
   </body>
